force-app/main/default/objects/CEC_Inverters__mdt/CEC_Inverters__mdt.object-meta.xml
<CustomObject>
    <description>This will hold inverters details from clean energy. A batch would update these records</description>
    <label>CEC Inverter</label>
    <pluralLabel>CEC Inverters</pluralLabel>
</CustomObject>