force-app/main/default/objects/CEC_Inverters__mdt/fields/AC_DC_Coupling__c.field-meta.xml
<CustomField>
    <fullName>AC_DC_Coupling__c</fullName>
    <description>AC_DC_Coupling__c in Devices object</description>
    <label>AC DC Coupling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>