force-app/main/default/objects/CEC_Inverters__mdt/fields/AC_Equip_Type__c.field-meta.xml
<CustomField>
    <fullName>AC_Equip_Type__c</fullName>
    <description>AC_Equip_Type__c in devices object</description>
    <label>AC Equip Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inverter</fullName>
                <default>true</default>
                <label>Inverter</label>
            </value>
            <value>
                <fullName>Non-Inverter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>