force-app/main/default/objects/CEC_Inverters__mdt/fields/CEC_ID__c.field-meta.xml
<CustomField>
    <fullName>CEC_ID__c</fullName>
    <label>CEC_ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>