force-app/main/default/objects/CEC_Inverters__mdt/fields/EAI_Type__c.field-meta.xml
<CustomField>
    <fullName>EAI_Type__c</fullName>
    <label>EAI_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>