force-app/main/default/objects/CEC_Inverters__mdt/fields/Inverter_Type__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Type__c</fullName>
    <description>AC_Equip_Sub_Type__c in devices....</description>
    <label>Inverter Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>