force-app/main/default/objects/CEC_Inverters__mdt/fields/InverterCapacity__c.field-meta.xml
<CustomField>
    <fullName>InverterCapacity__c</fullName>
    <label>Inverter Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>