force-app/main/default/objects/CEC_Inverters__mdt/fields/InverterMfr__c.field-meta.xml
<CustomField>
    <fullName>InverterMfr__c</fullName>
    <description>Inverter Manufacturer Name</description>
    <label>Inverter Manufacturer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>