force-app/main/default/objects/CEC_Inverters__mdt/fields/InverterModel__c.field-meta.xml
<CustomField>
    <fullName>InverterModel__c</fullName>
    <description>This filed holds the model names for each inverter manufacturer</description>
    <label>Inverter Model</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>