force-app/main/default/objects/CEC_Inverters__mdt/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <length>25</length>
    <type>Text</type>
</CustomField>