force-app/main/default/objects/CEC_Inverters__mdt/fields/Requested__c.field-meta.xml
<CustomField>
    <fullName>Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested</label>
    <type>Checkbox</type>
</CustomField>