force-app/main/default/objects/CEC_Inverters__mdt/fields/SID__c.field-meta.xml
<CustomField>
    <fullName>SID__c</fullName>
    <label>SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>