force-app/main/default/objects/CEC_Inverters__mdt/listViews/List_With_More_Fields.listView-meta.xml
<ListView>
    <fullName>List_With_More_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>InverterMfr__c</columns>
    <columns>InverterModel__c</columns>
    <columns>EAI_Ref__c</columns>
    <columns>CEC_ID__c</columns>
    <columns>InverterCapacity__c</columns>
    <columns>Inverter_Type__c</columns>
    <columns>AC_DC_Coupling__c</columns>
    <filterScope>Everything</filterScope>
    <label>List With More Fields</label>
    <language>en_US</language>
</ListView>