force-app/main/default/objects/CEC_Inverters__mdt/listViews/With_key_fields.listView-meta.xml
<ListView>
    <fullName>With_key_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>CEC_ID__c</columns>
    <columns>EAI_Ref__c</columns>
    <columns>InverterMfr__c</columns>
    <columns>InverterModel__c</columns>
    <columns>InverterCapacity__c</columns>
    <columns>Inverter_Type__c</columns>
    <columns>SID__c</columns>
    <columns>AC_Equip_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>With key fields</label>
    <language>en_US</language>
</ListView>